assets/css/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";
@import "_prosemirror";

@layer base {

  /* Base Styles */

  html, body, #wrapper {
    @apply min-h-screen;
  }

  html {
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
  }

  h1 {
    @apply text-4xl font-bold my-6 text-gray-800 dark:text-gray-100;
  }

  h2 {
    @apply text-2xl font-bold my-3 text-gray-800 dark:text-gray-100;
  }

  a {
    @apply hover:underline decoration-accent1 decoration-2 underline-offset-4 dark:text-gray-300;
  }

  a.active {
    @apply underline;
  }

  a[href*="//"]:after {
    content: ' ↝';
  }

  #wrapper > footer {
    @apply bg-gray-700 text-gray-200;
    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='250' height='30' viewBox='0 0 1000 120'%3E%3Cg fill='none' stroke='%23333' stroke-width='10' %3E%3Cpath d='M-500 75c0 0 125-30 250-30S0 75 0 75s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 45c0 0 125-30 250-30S0 45 0 45s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 105c0 0 125-30 250-30S0 105 0 105s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 15c0 0 125-30 250-30S0 15 0 15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500-15c0 0 125-30 250-30S0-15 0-15s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3Cpath d='M-500 135c0 0 125-30 250-30S0 135 0 135s125 30 250 30s250-30 250-30s125-30 250-30s250 30 250 30s125 30 250 30s250-30 250-30'/%3E%3C/g%3E%3C/svg%3E");
    animation: animatedBackground 2000s linear infinite;
  }

  /* Forms */

  form {
    @apply flex flex-col gap-3;
  
    & fieldset {
      @apply flex flex-col gap-1;
    }
  
    & [type="text"], 
    & [type="email"], 
    & [type="url"], 
    & [type="password"], 
    & [type="number"], 
    & [type="date"], 
    & [type="datetime-local"], 
    & [type="month"], 
    & [type="search"], 
    & [type="tel"], 
    & [type="time"], 
    & [type="week"], 
    & [multiple], 
    & textarea, 
    & select {
      @apply inline-block w-full rounded-sm;
    }
  
    & .ProseMirror {
      @apply p-3 bg-white border border-gray-500;
    }
  }

  /* Tables */
  
  table {
    @apply w-full text-gray-800 dark:text-gray-300 table-auto border-collapse my-3;
  
    & thead {
      @apply bg-gray-300 dark:bg-gray-700 dark:text-gray-300;
    }
  
    & tbody {
      @apply bg-gray-100 dark:bg-gray-800;
    }
  
    & th, & td {
      @apply border border-gray-300 dark:border-gray-900 p-4 text-left;
    }
  } 

  /* Article and Freeform Content */

  #content {
    @apply hover:prose-a:decoration-accent2;

    & a {
      @apply decoration-accent2;
    }
  }
}


.button, input[type=submit], button[type=submit] {
  @apply p-3 rounded-sm inline-block border border-gray-500 bg-gray-300 hover:bg-accent2 hover:no-underline dark:bg-gray-600 hover:dark:text-gray-800;
}

.card {
  @apply bg-gray-100 dark:bg-gray-800 px-6 py-4 shadow-lg border-b dark:border-0 rounded-sm;
}

.tag {
  @apply inline-block text-sm p-1 rounded shadow-sm bg-gray-300 text-gray-800 dark:bg-gray-700 dark:text-gray-400;
}

.alert {
  @apply p-3 empty:hidden shadow mb-6;
}


article.card.note, article.card.bookmark {
  @apply dark:shadow-none dark:py-4;

  & header {
    @apply mb-3 pb-5 border-b dark:border-gray-700;
  }

  & section.html {
    @apply mx-auto prose dark:prose-invert;
  }

  & footer {
    @apply mt-3 pt-3 border-t dark:border-gray-700 break-all;

    & a {
      @apply text-gray-500;
    }
  }
}

/* Animations */

@keyframes animatedBackground {
  from {
    background-position: 0 0;
  }
  /*use negative width if you want it to flow right to left else and positive for left to right*/
  to {
    background-position: -10000px 0;
  }
}

